# fastlucide

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
fastlucide/: _modidx.py  core.py  icons.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
tools/: geticons.sh
