[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastlucide"
dynamic = ["version"]
description = "Lucide icons for FastHTML"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'python-fasthtml']

[project.urls]
Repository = "https://github.com/AnswerDotAI/fastlucide"
Documentation = "https://AnswerDotAI.github.io/fastlucide"

[project.entry-points.nbdev]
fastlucide = "fastlucide._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastlucide.__version__"}

[tool.setuptools.packages.find]
include = ["fastlucide"]

[tool.nbdev]
custom_sidebar = false
